<resources>
    <string name="app_name">Android3HW</string>
    <string name="Attractions">Attractions</string>
    <string name="Dining">Dining</string>
    <string name="Education">Education</string>
    <string name="Family">Family</string>
    <string name="Health">Health</string>
    <string name="Office">Office</string>
    <string name="Promotions">Promotions</string>
    <string name="Radio">Radio</string>
    <string name="Recipes">Recipes</string>
    <string name="Sports">Sports</string>
    <string name="photo">PHOTO</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sign_in">* Just sign in</string>
    <string name="android">Android</string>
    <string name="count_posts_125">125</string>
    <string name="posts">Posts</string>
    <string name="count_of_followers">20K</string>
    <string name="followers">Followers</string>
    <string name="count_of_following">22</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="descriptions">Description</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="certificated">Certificated</string>
    <string name="layout">Layouts</string>
    <string name="views">Views</string>
</resources>