<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="30dp">

        </TextView>

    </LinearLayout>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/email"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/edittext_round"
        android:layout_gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">


    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/edittext_round"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">

    </EditText>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp">
    </CheckBox>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="150dp">

    </TextView>

</LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_round">

    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_sign_in"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp">

    </TextView>
</LinearLayout>