<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text_sign_in_top_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingEnd="0dp">

    </TextView>
    <EditText
        android:id="@+id/edit_text_email_constraint_layout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_round"
        android:text="@string/email"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_sign_in_top_constraint_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </EditText>
    <EditText
        android:id="@+id/edit_text_password_constraint_layout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_round"
        android:text="@string/password"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email_constraint_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">

    </EditText>
    <CheckBox
        android:id="@+id/checkbox_remember_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_constraint_layout"
        app:layout_constraintStart_toStartOf="@id/edit_text_password_constraint_layout"
        android:layout_marginTop="30dp">

    </CheckBox>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_constraint_layout"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password_constraint_layout"
        android:layout_marginTop="35dp">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_sign_in"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/checkbox_remember_constraint_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
    </TextView>





</androidx.constraintlayout.widget.ConstraintLayout>